--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body style="display: none;">
 <div id="wrap">
   <header>
     <div class="header-top">
@@ -29,7 +29,6 @@
 
           <div id="message" class="form-message alert rt"></div>
           <div class="btn-wrap ct">
-            <button type="button" class="btn btn-secondary">회원가입</button>
             <button type="button" class="btn btn-primary">로그인</button>
           </div>
         </div>
