--- a/src/pages/admin-learningSet.html
+++ b/src/pages/admin-learningSet.html
@@ -100,6 +100,11 @@
       </div>
     </div>
   </div>
+
+  <div class="loading-popup">
+    <div class="dim"></div>
+    <div class="loading"></div>
+  </div>
 </div>
 </body>
 </html>
