--- a/src/pages/admin-member.html
+++ b/src/pages/admin-member.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>관리자 페이지</title>
   </head>
   <body>
     <div id="wrap">
@@ -49,14 +49,9 @@
             <div class="search">
               <div class="form form-search">
                 <select id="findSelect" name="" class="form-select">
-                  <option value="name">성명</option>
+                  <option value="name">이름</option>
                   <option value="id">회원아이디</option>
-                  <option value="type">권한</option>
-                  <option value="email">E-Mail</option>
-                  <option value="hp">휴대전화번호</option>
-                  1
-                  <option value="publishedDate">가입일시</option>
-                  <option value="ip">IP</option>
+                  <option value="publishedDate">등록날짜</option>
                 </select>
                 <input
                   id="findText"
@@ -101,7 +96,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <!-- <tr>
                     <td>test1</td>
                     <td>차상빈</td>
                     <td>2022-12-04</td>
@@ -113,7 +108,7 @@
                         >삭제</a
                       >
                     </td>
-                  </tr>
+                  </tr> -->
                 </tbody>
               </table>
             </div>
@@ -127,11 +122,6 @@
                 다음
               </button>
             </div>
-
-            <!-- <div class="btn-wrap">
-          <button type="button" class="btn btn-secondary">선택수정</button>
-          <button type="button" class="btn btn-secondary">선택삭제</button>
-        </div> -->
           </div>
         </div>
       </div>
