회원정보 및 수정 API 적용

--- a/src/pages/admin-member-edit.html
+++ b/src/pages/admin-member-edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
 </head>
-<body>
+<body style="display: none;">
 <div id="wrap">
   <header>
     <div class="header-top">
@@ -48,22 +48,22 @@
               <th>아이디</th>
               <td>
                 <div class="tb-form">
-                  <div id="id">test1</div>
+                  <div id="id"></div>
                 </div>
               </td>
               <th>이름</th>
               <td>
                 <div class="tb-form">
-                  <input id="name" type="text" maxlength="10" value="차상빈">
+                  <input id="name" type="text">
                 </div>
               </td>
             </tr>
 
             <tr>
-              <th>등록날짜</th>
+              <th>비밀번호</th>
               <td colspan="3">
                 <div class="tb-form">
-                  <input id="date" type="text" maxlength="10" value="2022-12-04">
+                  <input id="password" type="password">
                 </div>
               </td>
             </tr>
