--- a/src/pages/admin-learningSet-edit.html
+++ b/src/pages/admin-learningSet-edit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>관리자 페이지</title>
 </head>
-<body>
+<body style="display: none;">
 <div id="wrap">
   <header>
     <div class="header-top">
@@ -45,8 +45,8 @@
             </colgroup>
             <tbody>
             <tr>
-              <th>학습넘버</th>
-              <td class="lt" colspan="3">1</td>
+              <th>학습세트넘버</th>
+              <td class="lt" id="learningNo" colspan="3">1</td>
             </tr>
 
             <tr>
@@ -54,7 +54,7 @@
               <td>
                 <div class="tb-form">
                   <div class="tb-form">
-                    <input id="videoUrl" type="text" maxlength="10" value="비디오링크">
+                    <input id="videoUrl" type="text" value="">
                   </div>
                 </div>
               </td>
@@ -63,7 +63,7 @@
               <td>
                 <div class="tb-form">
                   <div class="tb-form">
-                    <input id="videoName" type="text" maxlength="10" value="비디오이름">
+                    <input id="videoName" type="text" value="">
                   </div>
                 </div>
               </td>
@@ -71,18 +71,12 @@
 
             <tr>
               <th>퀴즈넘버</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="number" type="text" maxlength="10" value="1">
+                  <input id="quizNo" type="text" value="">
                 </div>
               </td>
-
-              <th>등록날짜</th>
-              <td>
-                <div class="tb-form">
-                  <input id="date" type="text" maxlength="10" value="2022-12-03">
-                </div>
-              </td>
+              
             </tr>
             </tbody>
           </table>
