--- a/src/pages/admin-learningInfo-edit.html
+++ b/src/pages/admin-learningInfo-edit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>관리자 페이지</title>
 </head>
-<body>
+<body style="display: none;">
 <div id="wrap">
   <header>
     <div class="header-top">
@@ -20,8 +20,8 @@
           <li class="dep01"><a href="admin-member.html">회원정보</a></li>
           <li class="dep01"><a href="admin-learningSet.html">학습세트</a></li>
           <li class="dep01"><a href="admin-learningInfo.html" class="current">학습정보</a></li>
-          <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-quiz.html">퀴즈데이터</a></li>
+          <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-memo.html">메모</a></li>
         </ul>
       </nav>
@@ -48,14 +48,14 @@
               <th>학습날짜</th>
               <td>
                 <div class="tb-form">
-                  <input id="learningDate" type="text" maxlength="10" value="2022-12-04">
+                  <input id="learningDate" type="text" maxlength="10" value="">
                 </div>
               </td>
 
               <th>학습시간</th>
               <td>
                 <div class="tb-form">
-                  <input id="learningTime" type="text" maxlength="10" value="17:00">
+                  <input id="learningTime" type="text" maxlength="11" value="">
                 </div>
               </td>
             </tr>
@@ -63,13 +63,13 @@
               <th>회원아이디</th>
               <td>
                 <div class="tb-form">
-                  <input id="id" type="text" maxlength="10" value="test1">
+                  <input id="userId" type="text" value="">
                 </div>
               </td>
-              <th>선생님이미지링크</th>
+              <th>선생님 이미지 링크</th>
               <td>
                 <div class="tb-form">
-                  <input id="imgUrl" type="text" maxlength="10">
+                  <input id="teacherImgUrl" type="text">
                 </div>
               </td>
             </tr>
@@ -78,24 +78,14 @@
               <th>학습문구</th>
               <td>
                 <div class="tb-form">
-                  <input id="learningText" type="text" maxlength="10" value="학습문구">
+                  <input id="learningText" type="text" value="">
                 </div>
               </td>
 
               <th>학습데이터</th>
               <td>
                 <div class="tb-form">
-                  <input id="learningData" type="text" maxlength="10" value="학습데이터">
-                </div>
-              </td>
-            </tr>
-
-
-            <tr>
-              <th>등록날짜</th>
-              <td colspan="3">
-                <div class="tb-form">
-                  <input id="date" type="text" maxlength="10" value="2022-12-04">
+                  <input id="learningData" type="text" value="">
                 </div>
               </td>
             </tr>
