--- a/src/pages/admin-learningInfo.html
+++ b/src/pages/admin-learningInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
 </head>
-<body>
+<body style="display: none;">
 <div id="wrap">
   <header>
     <div class="header-top">
@@ -20,8 +20,8 @@
           <li class="dep01"><a href="admin-member.html">회원정보</a></li>
           <li class="dep01"><a href="admin-learningSet.html">학습세트</a></li>
           <li class="dep01"><a href="admin-learningInfo.html" class="current">학습정보</a></li>
-          <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-quiz.html">퀴즈데이터</a></li>
+          <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-memo.html">메모</a></li>
         </ul>
       </nav>
@@ -36,20 +36,18 @@
 
         <div class="file">
           <input type="file" id="fileUpload" class="form-file">
-          <span class="file-name">선택된 파일 없음</span>
+          <!-- <span class="file-name">선택된 파일 없음</span> -->
           <label for="fileUpload" class="btn btn-file">파일첨부</label>
         </div>
 
         <div class="search">
           <div class="form form-search">
             <select id="findSelect" name="" class="form-select">
-              <option value="name">성명</option>
-              <option value="id">회원아이디</option>
-              <option value="type">권한</option>
-              <option value="email">E-Mail</option>
-              <option value="hp">휴대전화번호</option>1
-              <option value="publishedDate">가입일시</option>
-              <option value="ip">IP</option>
+              <option value="learningDate">학습날짜</option>
+              <option value="learningTime">학습시간</option>
+              <option value="userId">회원아이디</option>
+              <option value="teacherImgUrl">선생님 이미지 링크</option>
+              <option value="learningText">학습문구</option>
             </select>
             <input id="findText" type="text" class="form-input" placeholder="검색어를 입력하세요." title="검색어 입력" style="padding: 5px; margin: 0; border: 1px solid #c9c9c9; border-radius: 0; font-size: 1.3rem; line-height: 1; background-color: transparent; -webkit-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; width: 300px; height: 33px;">
             <button id="findBtn" type="button" class="btn btn-primary">검색</button>
@@ -66,7 +64,7 @@
               <th>학습날짜</th>
               <th>학습시간</th>
               <th>회원아이디</th>
-              <th>선생님이미지링크</th>
+              <th>선생님 이미지 링크</th>
               <th>학습문구</th>
               <th>학습데이터</th>
               <th>등록날짜</th>
@@ -74,7 +72,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <!-- <tr>
               <td>2022-12-04</td>
               <td>02:00</td>
               <td>test1</td>
@@ -86,7 +84,7 @@
                 <a href="admin-learningInfo-edit.html" class="btn btn-primary">수정</a>
                 <a href="javascript: void(0);" class="btn btn-cancel">삭제</a>
               </td>
-            </tr>
+            </tr> -->
             </tbody>
           </table>
         </div>
@@ -103,6 +101,10 @@
         </div> -->
       </div>
     </div>
+  </div>
+  <div class="loading-popup">
+    <div class="dim"></div>
+    <div class="loading"></div>
   </div>
 </div>
 </body>
