--- a/src/pages/admin-quiz-edit.html
+++ b/src/pages/admin-quiz-edit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>관리자 페이지</title>
 </head>
-<body>
+<body style="display: none;">
 <div id="wrap">
   <header>
     <div class="header-top">
@@ -20,8 +20,8 @@
           <li class="dep01"><a href="admin-member.html">회원정보</a></li>
           <li class="dep01"><a href="admin-learningSet.html">학습세트</a></li>
           <li class="dep01"><a href="admin-learningInfo.html">학습정보</a></li>
-          <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-quiz.html" class="current">퀴즈데이터</a></li>
+          <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-memo.html">메모</a></li>
         </ul>
       </nav>
@@ -46,11 +46,11 @@
             <tbody>
             <tr>
               <th>퀴즈넘버</th>
-              <td class="lt">1</td>
+              <td id="quizNo" class="lt"></td>
               <th>퀴즈문구</th>
               <td>
                 <div class="tb-form">
-                  <input id="quizText" type="text" maxlength="10" value="차상빈">
+                  <input id="text" type="text" value="">
                 </div>
               </td>
             </tr>
@@ -59,30 +59,24 @@
               <th>퀴즈문제</th>
               <td>
                 <div class="tb-form">
-                  <input id="quiz" type="text" maxlength="10" value="차상빈">
+                  <input id="question" type="text" value="">
                 </div>
               </td>
               <th>퀴즈정답</th>
               <td>
                 <div class="tb-form">
-                  <input id="quizAnswer" type="text" maxlength="10" value="차상빈">
+                  <input id="answer" type="text" value="">
                 </div>
               </td>
             </tr>
 
             <tr>
               <th>제한시간</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="time" type="text" maxlength="10" value="00:30">
+                  <input id="time" type="text" value="">
                 </div>
-              </td>
-              <th>등록날짜</th>
-              <td>
-                <div class="tb-form">
-                  <input id="date" type="text" maxlength="10" value="2022-12-04">
-                </div>
-              </td>
+              </td>              
             </tr>
             </tbody>
           </table>
