콘텐츠 학습 관련, 리플레이 API 적용

--- a/src/pages/admin-learningResult.html
+++ b/src/pages/admin-learningResult.html
@@ -71,12 +71,12 @@
               <th>비디오시청시간</th>
               <th>평균점수</th>
               <th>평균풀이시간</th>
-              <th>틀린문제</th>
+              <th>틀린퀴즈넘버</th>
               <th>총 점수</th>
-              <th>리플레이 평균시간</th>
-              <th>리플레이 풀이시간</th>
               <th>등록날짜</th>
-              <th>리플레이 등록날짜</th>
+              <th>평균점수(리플레이)</th>
+              <th>평균풀이시간(리플레이)</th>
+              <th>등록날짜(리플레이)</th>
             </tr>
             </thead>
             <tbody>
