--- a/src/pages/admin-quiz.html
+++ b/src/pages/admin-quiz.html
@@ -19,8 +19,8 @@
         <ul>
           <li class="dep01"><a href="admin-member.html">회원정보</a></li>
           <li class="dep01"><a href="admin-learningSet.html">학습세트</a></li>
-          <li class="dep01"><a href="admin-learningInfo.html">학습정보</a></li>
           <li class="dep01"><a href="admin-quiz.html" class="current">퀴즈데이터</a></li>
+          <li class="dep01"><a href="admin-learningInfo.html">학습정보</a></li>
           <li class="dep01"><a href="admin-learningResult.html">학습결과</a></li>
           <li class="dep01"><a href="admin-memo.html">메모</a></li>
         </ul>
@@ -37,7 +37,7 @@
         <div class="file">
           <input type="file" id="fileUpload" class="form-file">
           <!-- <span class="file-name">선택된 파일 없음</span> -->
-          <label for="fileUpload" class="btn btn-file">파일첨부</label>
+          <label for="fileUpload" class="btn btn-file">파일업로드</label>
         </div>
 
         <div class="search">
