최종 소스 업로드

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
     <meta name="viewport" content="initial-scale=1, viewport-fit=cover" />
+    <link ref="apple-touch-icon" href="https://2xmath.xyz/icon.png" />
+    <link ref="shortcut icon" href="https://2xmath.xyz/icon.png" />
     <title>실습 페이지</title>
     <style>
       /* * {
