--- a/src/pages/admin-learningInfo-edit.html
+++ b/src/pages/admin-learningInfo-edit.html
@@ -46,46 +46,49 @@
             <tbody>
             <tr>
               <th>학습날짜</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="learningDate" type="text" maxlength="10" value="">
+                  <input id="learningDate" type="text" maxlength="10" value="" style="min-width: 100%;">
                 </div>
-              </td>
-
+              </td>             
+            </tr>
+            <tr>
               <th>학습시간</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="learningTime" type="text" maxlength="11" value="">
+                  <input id="learningTime" type="text" maxlength="11" value="" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
             <tr>
               <th>회원아이디</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="userId" type="text" value="">
+                  <input id="userId" type="text" value="" style="min-width: 100%;">
                 </div>
-              </td>
+              </td>              
+            </tr>
+            <tr>
               <th>선생님 이미지 링크</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="teacherImgUrl" type="text">
+                  <input id="teacherImgUrl" type="text" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
-
             <tr>
               <th>학습문구</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <textarea id="learningText" type="text" value=""></textarea>
+                  <textarea id="learningText" type="text" value="" style="width: 100%; height: 100px;"></textarea>
                 </div>
-              </td>
-
+              </td>              
+            </tr>
+            <tr>
               <th>학습데이터</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="learningData" type="text" value="">
+                  <input id="learningData" type="text" value="" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
