--- a/src/pages/admin-learningInfo.html
+++ b/src/pages/admin-learningInfo.html
@@ -64,9 +64,10 @@
               <th>학습날짜</th>
               <th>학습시간</th>
               <th>회원아이디</th>
-              <th>선생님 이미지 링크</th>
+              <th>이미지 링크</th>
               <th>학습문구</th>
               <th>학습데이터</th>
+              <th>시청 완료</th>
               <th>등록날짜</th>
               <th>관리</th>
             </tr>
