--- a/src/pages/admin-learningSet-edit.html
+++ b/src/pages/admin-learningSet-edit.html
@@ -45,25 +45,27 @@
             </colgroup>
             <tbody>
             <tr>
-              <th>학습세트넘버</th>
+              <th>세트넘버</th>
               <td class="lt" id="learningNo" colspan="3">1</td>
             </tr>
 
             <tr>
-              <th>비디오 링크</th>
-              <td>
+              <th>제목</th>
+              <td colspan="3">
                 <div class="tb-form">
                   <div class="tb-form">
-                    <input id="videoUrl" type="text" value="">
+                    <input id="videoUrl" type="text" value="" style="min-width: 100%;">
                   </div>
                 </div>
-              </td>
+              </td>             
+            </tr>
 
+            <tr>
               <th>비디오 이름</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
                   <div class="tb-form">
-                    <input id="videoName" type="text" value="">
+                    <input id="videoName" type="text" value="" style="min-width: 100%;">
                   </div>
                 </div>
               </td>
@@ -73,7 +75,7 @@
               <th>퀴즈넘버</th>
               <td colspan="3">
                 <div class="tb-form">
-                  <input id="quizNo" type="text" value="">
+                  <input id="quizNo" type="text" value="" style="min-width: 100%;">
                 </div>
               </td>
               
