--- a/src/pages/admin-quiz-edit.html
+++ b/src/pages/admin-quiz-edit.html
@@ -46,26 +46,32 @@
             <tbody>
             <tr>
               <th>퀴즈넘버</th>
-              <td id="quizNo" class="lt"></td>
+              <td colspan="3" id="quizNo" class="lt"></td>              
+            </tr>
+
+            <tr>
               <th>퀴즈문구</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="text" type="text" value="">
+                  <input id="text" type="text" value="" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
 
             <tr>
               <th>퀴즈문제</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="question" type="text" value="">
+                  <input id="question" type="text" value="" style="min-width: 100%;">
                 </div>
-              </td>
+              </td>              
+            </tr>
+
+            <tr>
               <th>퀴즈정답</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="answer" type="text" value="">
+                  <input id="answer" type="text" value="" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
@@ -74,7 +80,7 @@
               <th>제한시간</th>
               <td colspan="3">
                 <div class="tb-form">
-                  <input id="time" type="text" value="">
+                  <input id="time" type="text" value="" style="min-width: 100%;">
                 </div>
               </td>              
             </tr>
