--- a/src/pages/admin-learningResult.html
+++ b/src/pages/admin-learningResult.html
@@ -69,6 +69,8 @@
               <th>학습세트넘버</th>
               <th>학습시간</th>
               <th>비디오시청시간</th>
+              <th>비디오시청비율</th>
+              <th>비디오시청완료</th>
               <th>평균점수</th>
               <th>평균풀이시간</th>
               <th>틀린퀴즈넘버</th>
@@ -80,19 +82,6 @@
             </tr>
             </thead>
             <tbody>
-            <!-- <tr>
-              <td>test1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>2022-12-04</td>
-            </tr> -->
             </tbody>
           </table>
         </div>
