--- a/src/pages/admin-learningSet.html
+++ b/src/pages/admin-learningSet.html
@@ -43,8 +43,8 @@
         <div class="search">
           <div class="form form-search">
             <select id="findSelect" name="" class="form-select">
-              <option value="learningNo">학습세트넘버</option>
-              <option value="videoName">비디오 이름</option>
+              <option value="learningNo">세트넘버</option>
+              <option value="videoName">제목</option>
               <option value="videoUrl">비디오 링크</option>
             </select>
             <input id="findText" type="text" class="form-input" placeholder="검색어를 입력하세요." title="검색어 입력" style="padding: 5px; margin: 0; border: 1px solid #c9c9c9; border-radius: 0; font-size: 1.3rem; line-height: 1; background-color: transparent; -webkit-box-sizing: border-box; box-sizing: border-box; vertical-align: middle; width: 300px; height: 33px;">
@@ -59,8 +59,8 @@
           <table class="tb full">
             <thead>
             <tr>
-              <th>학습세트넘버</th>
-              <th>비디오 이름</th>
+              <th>세트넘버</th>
+              <th>제목</th>
               <th>비디오 링크</th>
               <th>퀴즈넘버</th>
               <th>등록날짜</th>
