--- a/src/pages/admin-member-edit.html
+++ b/src/pages/admin-member-edit.html
@@ -46,24 +46,25 @@
             <tbody>
             <tr>
               <th>아이디</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
                   <div id="id"></div>
                 </div>
-              </td>
+              </td>              
+            </tr>
+            <tr>
               <th>이름</th>
-              <td>
+              <td colspan="3">
                 <div class="tb-form">
-                  <input id="name" type="text">
+                  <input id="name" type="text" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
-
             <tr>
               <th>비밀번호</th>
               <td colspan="3">
                 <div class="tb-form">
-                  <input id="password" type="password">
+                  <input id="password" type="password" style="min-width: 100%;">
                 </div>
               </td>
             </tr>
